[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
